# Rust-Codex-Project

./: .gitignore  Cargo.toml  README.md
axum_web/: Cargo.toml
axum_web/src/: main.rs
axum_web/src/api/: mod.rs
axum_web/src/database/: mod.rs
axum_web/src/domain/: mod.rs
axum_web/src/repository/: mod.rs  sqlite_repository.rs
axum_web/src/service/: mod.rs
rust_basic/: README.md
rust_basic/src/: main.rs  prints.rs  vars.rs
src/: main.rs  strings.rs  vars.rs
